Includes response output 'spo externaluser' until 'spo hidedefaultthemes'. Closes #3930

--- a/docs/docs/cmd/spo/feature/feature-disable.mdx
+++ b/docs/docs/cmd/spo/feature/feature-disable.mdx
@@ -14,16 +14,16 @@ m365 spo feature disable [options]
 
 ```md definition-list
 `-u, --webUrl <webUrl>`
-: The URL of the site or web for which to disable the feature
+: The URL of the site or web for which to disable the feature.
 
 `-i, --id <id>`
-: The ID of the feature to disable
+: The ID of the feature to disable.
 
 `-s, --scope [scope]`
-: Scope of the Feature to disable. Allowed values `Site,Web`. Default `Web`
+: Scope of the Feature to disable. Allowed values: `Site`, `Web`. Defaults to `Web`.
 
 `--force`
-: Specifies whether to continue if an error occurs when disabling the feature
+: Specifies whether to continue if an error occurs when disabling the feature.
 ```
 
 <Global />
@@ -34,14 +34,18 @@ If the specified url doesn't refer to an existing site collection, you will get 
 
 ## Examples
 
-Disable site feature
+Disable site feature.
 
 ```sh
 m365 spo feature disable --webUrl https://contoso.sharepoint.com/sites/salis --id 915c240e-a6cc-49b8-8b2c-0bff8b553ed3 --scope Site
 ```
 
-Disable web feature (with force to ignore errors)
+Disable web feature (with force to ignore errors).
 
 ```sh
 m365 spo feature disable --webUrl https://contoso.sharepoint.com/sites/salis --id 00bfea71-5932-4f9c-ad71-1557e5751100 --scope Web --force
 ```
+
+## Response
+
+The command won't return a response on success.
