--- a/docs/docs/cmd/spo/file/file-retentionlabel-remove.mdx
+++ b/docs/docs/cmd/spo/file/file-retentionlabel-remove.mdx
@@ -30,13 +30,13 @@ m365 spo file retentionlabel remove [options]
 
 ## Examples
 
-Removes the retention label from a file in a given site based on the file id
+Removes the retention label from a file in a given site based on the file id.
 
 ```sh
 m365 spo file retentionlabel remove --webUrl https://contoso.sharepoint.com/sites/project-x --fileId 0cd891ef-afce-4e55-b836-fce03286cccf
 ```
 
-Removes the retention label from a file in a given site based on the file url
+Removes the retention label from a file in a given site based on the file url.
 
 ```sh
 m365 spo file retentionlabel remove --webUrl https://contoso.sharepoint.com/sites/project-x --fileUrl /sites/project-x/Shared Documents/Document.docx --id 1
