--- a/docs/docs/cmd/spo/file/file-roleassignment-add.mdx
+++ b/docs/docs/cmd/spo/file/file-roleassignment-add.mdx
@@ -59,3 +59,7 @@ Adds a role assignment to a file with a specified server-relative URL the for a 
 ```sh
 m365 spo file roleassignment add --webUrl "https://contoso.sharepoint.com/sites/project-x" --fileUrl "/sites/project-x/documents/Test1.docx" --upn "testuser@tenant.onmicrosoft.com" --roleDefinitionName "Read"
 ```
+
+## Response
+
+The command won't return a response on success.
