--- a/docs/docs/cmd/spo/folder/folder-retentionlabel-remove.mdx
+++ b/docs/docs/cmd/spo/folder/folder-retentionlabel-remove.mdx
@@ -30,13 +30,13 @@ m365 spo folder retentionlabel remove [options]
 
 ## Examples
 
-Removes the retention label from a folder in a given site based on the folder id
+Removes the retention label from a folder in a given site based on the folder id.
 
 ```sh
 m365 spo folder retentionlabel remove --webUrl https://contoso.sharepoint.com/sites/project-x --folderId 0cd891ef-afce-4e55-b836-fce03286cccf
 ```
 
-Removes the retention label from a folder in a given site based on the folder url
+Removes the retention label from a folder in a given site based on the folder url.
 
 ```sh
 m365 spo folder retentionlabel remove --webUrl https://contoso.sharepoint.com/sites/project-x --folderUrl /sites/project-x/Shared Documents/Folder --id 1
