--- a/docs/docs/cmd/spo/folder/folder-roleinheritance-break.mdx
+++ b/docs/docs/cmd/spo/folder/folder-roleinheritance-break.mdx
@@ -47,3 +47,7 @@ Break the inheritance of the specified root folder for the library with a specif
 ```sh
 m365 spo folder roleinheritance break --webUrl "https://contoso.sharepoint.com/sites/project-x" --folderUrl "/sites/project-x/Shared Documents" --clearExistingPermissions --force
 ```
+
+## Response
+
+The command won't return a response on success.
