--- a/docs/docs/cmd/spo/group/group-add.mdx
+++ b/docs/docs/cmd/spo/group/group-add.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # spo group add
 
@@ -53,3 +55,79 @@ Create group with membership requests
 ```sh
 m365 spo group add --webUrl https://contoso.sharepoint.com/sites/project-x --name "Project leaders" --allowRequestToJoinLeave true --requestToJoinLeaveEmailSetting john.doe@contoso.com
 ```
+
+## Response
+
+<Tabs>
+  <TabItem value="JSON">
+
+  ```json
+  {
+    "Id": 37,
+    "IsHiddenInUI": false,
+    "LoginName": "Project leaders",
+    "Title": "Project leaders",
+    "PrincipalType": 8,
+    "AllowMembersEditMembership": false,
+    "AllowRequestToJoinLeave": false,
+    "AutoAcceptRequestToJoinLeave": false,
+    "Description": "This group contains all project leaders",
+    "OnlyAllowMembersViewMembership": true,
+    "OwnerTitle": "Jon Doe",
+    "RequestToJoinLeaveEmailSetting": null
+  }
+  ```
+
+  </TabItem>
+  <TabItem value="Text">
+
+  ```text
+  AllowMembersEditMembership    : false
+  AllowRequestToJoinLeave       : false
+  AutoAcceptRequestToJoinLeave  : false
+  Description                   : This group contains all project leaders
+  Id                            : 38
+  IsHiddenInUI                  : false
+  LoginName                     : Project leaders
+  OnlyAllowMembersViewMembership: true
+  OwnerTitle                    : Jon Doe
+  PrincipalType                 : 8
+  RequestToJoinLeaveEmailSetting: null
+  Title                         : Project leaders
+  ```
+
+  </TabItem>
+  <TabItem value="CSV">
+
+  ```csv
+  Id,IsHiddenInUI,LoginName,Title,PrincipalType,AllowMembersEditMembership,AllowRequestToJoinLeave,AutoAcceptRequestToJoinLeave,Description,OnlyAllowMembersViewMembership,OwnerTitle
+  39,,Project leaders,Project leaders,8,,,,This group contains all project leaders,1,Jon Doe
+  ```
+
+  </TabItem>
+  <TabItem value="Markdown">
+
+  ```md
+  # spo group add --webUrl "https://contoso.sharepoint.com/sites/project-x" --name "Project leaders" --description "This group contains all project leaders"
+
+  Date: 10/3/2023
+
+  ## Project leaders (40)
+
+  Property | Value
+  ---------|-------
+  Id | 40
+  IsHiddenInUI | false
+  LoginName | Project leaders
+  Title | Project leaders
+  PrincipalType | 8
+  AllowMembersEditMembership | false
+  AllowRequestToJoinLeave | false
+  AutoAcceptRequestToJoinLeave | false
+  Description | This group contains all project leaders
+  OnlyAllowMembersViewMembership | true
+  OwnerTitle | Jon Doe
+  ```
+
+  </TabItem>
+</Tabs>
