--- a/docs/docs/cmd/spo/group/group-remove.mdx
+++ b/docs/docs/cmd/spo/group/group-remove.mdx
@@ -14,30 +14,34 @@ m365 spo group remove [options]
 
 ```md definition-list
 `-u, --webUrl <webUrl>`
-: Url of the web to remove the group from
+: Url of the web to remove the group from.
 
 `--id [id]`
-: ID of the group to remove. Use ID or name but not both
+: ID of the group to remove. Use ID or name but not both.
 
 `--name [name]`
-: Name of the group to remove. Use ID or name but not both
+: Name of the group to remove. Use ID or name but not both.
 
 `-f, --force`
-: Confirm removal of the group
+: Confirm removal of the group.
 ```
 
 <Global />
 
 ## Examples
 
-Removes group with id _5_ from web _https://contoso.sharepoint.com/sites/mysite_
+Removes group with id from the specified web.
 
 ```sh
 m365 spo group remove --webUrl https://contoso.sharepoint.com/sites/mysite --id 5
 ```
 
-Removes group with name _Team Site Owners_ from web _https://contoso.sharepoint.com/sites/mysite_
+Removes group with name from the specified web.
 
 ```sh
 m365 spo group remove --webUrl https://contoso.sharepoint.com/sites/mysite --name "Team Site Owners"
 ```
+
+## Response
+
+The command won't return a response on success.
