--- a/docs/docs/cmd/spo/file/file-retentionlabel-ensure.mdx
+++ b/docs/docs/cmd/spo/file/file-retentionlabel-ensure.mdx
@@ -39,19 +39,19 @@ The `--assetId` option has to do with event-based retention. Event-based retenti
 
 ## Examples
 
-Applies a retention label to a file based on the label name and the fileUrl
+Applies a retention label to a file based on the label name and the fileUrl.
 
 ```sh
 m365 spo file retentionlabel ensure --webUrl https://contoso.sharepoint.com/sites/project-x --fileUrl '/Shared Documents/Document.docx' --name 'Some label'
 ```
 
-Applies a retention label to a file based on the label name and the fileId
+Applies a retention label to a file based on the label name and the fileId.
 
 ```sh
 m365 spo file retentionlabel ensure --webUrl https://contoso.sharepoint.com/sites/project-x --fileId '26541f96-017c-4189-a604-599e083533b8' --name 'Some label'
 ```
 
-Applies a event-based retention label to a file and updates the Asset Id field
+Applies a event-based retention label to a file and updates the Asset Id field.
 
 ```sh
 m365 spo file retentionlabel ensure --webUrl https://contoso.sharepoint.com/sites/project-x --fileId '26541f96-017c-4189-a604-599e083533b8' --name 'Some label' --assetId 'XYZ'
