--- a/docs/docs/cmd/spo/file/file-roleinheritance-reset.mdx
+++ b/docs/docs/cmd/spo/file/file-roleinheritance-reset.mdx
@@ -14,30 +14,34 @@ m365 spo file roleinheritance reset [options]
 
 ```md definition-list
 `-u, --webUrl <webUrl>`
-: URL of the site where the file is located
+: URL of the site where the file is located.
 
 `--fileUrl [fileUrl]`
-: The server- or site-relative decoded URL of the file to retrieve. Specify either `fileUrl` or `fileId` but not both
+: The server- or site-relative decoded URL of the file to retrieve. Specify either `fileUrl` or `fileId` but not both.
 
 `i, --fileId [fileId]`
-: The UniqueId (GUID) of the file to retrieve. Specify either `fileUrl` or `fileId` but not both
+: The UniqueId (GUID) of the file to retrieve. Specify either `fileUrl` or `fileId` but not both.
 
 `-f, --force`
-: Don't prompt for confirmation
+: Don't prompt for confirmation.
 ```
 
 <Global />
 
 ## Examples
 
-Reset inheritance of file with id (UniqueId) _b2307a39-e878-458b-bc90-03bc578531d6_ located in site _https://contoso.sharepoint.com/sites/project-x_
+Reset inheritance of file with the specified id (UniqueId) located in the specified site.
 
 ```sh
 m365 spo file roleinheritance reset --webUrl "https://contoso.sharepoint.com/sites/project-x" --fileId "b2307a39-e878-458b-bc90-03bc578531d6"
 ```
 
-Reset inheritance of file with server-relative url _/sites/project-x/documents/Test1_.docx located in site _https://contoso.sharepoint.com/sites/project-x_. It will **not** prompt for confirmation before resetting.
+Reset inheritance of file with the specified server-relative url located in the specified site. It will **not** prompt for confirmation before resetting.
 
 ```sh
 m365 spo file roleinheritance reset --webUrl "https://contoso.sharepoint.com/sites/project-x" --fileUrl "/sites/project-x/documents/Test1.docx" --force
 ```
+
+## Response
+
+The command won't return a response on success.
