--- a/docs/docs/cmd/spo/file/file-sharinglink-clear.mdx
+++ b/docs/docs/cmd/spo/file/file-sharinglink-clear.mdx
@@ -33,13 +33,13 @@ m365 spo file sharinglink clear [options]
 
 ## Examples
 
-Removes all sharing links from a file specified by id without prompting for confirmation
+Removes all sharing links from a file specified by id without prompting for confirmation.
 
 ```sh
 m365 spo file sharinglink clear --webUrl https://contoso.sharepoint.com/sites/demo --fileId daebb04b-a773-4baa-b1d1-3625418e3234 --force
 ```
 
-Removes sharing links of type anonymous from a file specified by url with prompting for confirmation
+Removes sharing links of type anonymous from a file specified by url with prompting for confirmation.
 
 ```sh
 m365 spo file sharinglink clear --webUrl https://contoso.sharepoint.com/sites/demo --fileUrl '/sites/demo/Shared Documents/document.docx' --scope anonymous
