--- a/docs/docs/cmd/spo/file/file-version-restore.mdx
+++ b/docs/docs/cmd/spo/file/file-version-restore.mdx
@@ -14,16 +14,16 @@ m365 spo file version restore [options]
 
 ```md definition-list
 `-u, --webUrl <webUrl>`
-: The URL of the site where the file is located
+: The URL of the site where the file is located.
 
 `--label <label>`
-: Label of version which will be restored
+: Label of version which will be restored.
 
 `--fileUrl [fileUrl]`
-: The server- or site-relative decoded URL of the file whose version will be restored. Specify either `fileUrl` or `fileId` but not both
+: The server- or site-relative decoded URL of the file whose version will be restored. Specify either `fileUrl` or `fileId` but not both.
 
 `-i, --fileId [fileId]`
-: The UniqueId (GUID) of the file whose version will be restored. Specify either `fileUrl` or `fileId` but not both
+: The UniqueId (GUID) of the file whose version will be restored. Specify either `fileUrl` or `fileId` but not both.
 
 `-f, --force`
 : Don't prompt for confirmation.
@@ -33,25 +33,25 @@ m365 spo file version restore [options]
 
 ## Examples
 
-Restores a file version in a specific site based on fileId and prompts for confirmation
+Restores a file version in a specific site based on fileId and prompts for confirmation.
 
 ```sh
 m365 spo file version restore --webUrl https://contoso.sharepoint.com --label "1.0" --fileId 'b2307a39-e878-458b-bc90-03bc578531d6'
 ```
 
-Restores a file version in a specific site based on fileUrl and prompts for confirmation
+Restores a file version in a specific site based on fileUrl and prompts for confirmation.
 
 ```sh
 m365 spo file version restore --webUrl https://contoso.sharepoint.com --label "1.0" --fileUrl '/Shared Documents/Document.docx'
 ```
 
-Restores a file version in a specific site based on fileId without prompting for confirmation
+Restores a file version in a specific site based on fileId without prompting for confirmation.
 
 ```sh
 m365 spo file version restore --webUrl https://contoso.sharepoint.com --label "1.0" --fileId 'b2307a39-e878-458b-bc90-03bc578531d6' --force
 ```
 
-Restores a file version in a specific site based on fileUrl without prompting for confirmation
+Restores a file version in a specific site based on fileUrl without prompting for confirmation.
 
 ```sh
 m365 spo file version restore --webUrl https://contoso.sharepoint.com --label "1.0" --fileUrl '/Shared Documents/Document.docx' --force
