--- a/docs/docs/cmd/spo/folder/folder-add.mdx
+++ b/docs/docs/cmd/spo/folder/folder-add.mdx
@@ -22,20 +22,20 @@ m365 spo folder add [options]
 : The server- or site-relative decoded URL of the parent folder.
 
 `-n, --name <name>`
-: Name of the new folder to be created
+: Name of the new folder to be created.
 ```
 
 <Global />
 
 ## Examples
 
-Creates folder in a specific library within the site
+Creates folder in a specific library within the site.
 
 ```sh
 m365 spo folder add --webUrl https://contoso.sharepoint.com/sites/project-x --parentFolderUrl '/Shared Documents' --name 'My Folder Name'
 ```
 
-Creates folder in a specific folder within the site
+Creates folder in a specific folder within the site.
 
 ```sh
 m365 spo folder add --webUrl https://contoso.sharepoint.com/sites/project-x --parentFolderUrl '/sites/project-x/Shared Documents/Reports' --name 'Financial reports'
