--- a/docs/docs/cmd/spo/folder/folder-rename.mdx
+++ b/docs/docs/cmd/spo/folder/folder-rename.mdx
@@ -27,13 +27,13 @@ m365 spo folder rename [options]
 
 ## Examples
 
-Renames a folder with a specific site-relative URL
+Renames a folder with a specific site-relative URL.
 
 ```sh
 m365 spo folder rename --webUrl https://contoso.sharepoint.com/sites/project-x --url '/Shared Documents/My Folder 1' --name 'My Folder 2'
 ```
 
-Renames a folder with a specific server-relative URL
+Renames a folder with a specific server-relative URL.
 
 ```sh
 m365 spo folder rename --webUrl https://contoso.sharepoint.com/sites/project-x --url '/sites/project-x/Shared Documents/My Folder 1' --name 'My Folder 2'
