--- a/docs/docs/cmd/spo/folder/folder-retentionlabel-ensure.mdx
+++ b/docs/docs/cmd/spo/folder/folder-retentionlabel-ensure.mdx
@@ -14,7 +14,7 @@ m365 spo folder retentionlabel ensure [options]
 
 ```md definition-list
 `-u, --webUrl <webUrl>`
-: URL of the site where the retention label from a file to apply is located
+: URL of the site where the retention label from a file to apply is located.
 
 `--folderUrl [folderUrl]`
 : The server- or site-relative decoded URL of the folder that should be labelled. Specify either `folderUrl` or `folderId` but not both.
@@ -34,13 +34,13 @@ You can also use [spo listitem retentionlabel remove](./../../../cmd/spo/listite
 
 ## Examples
 
-Applies a retention label to a folder based on the label name and the folderUrl
+Applies a retention label to a folder based on the label name and the folderUrl.
 
 ```sh
 m365 spo folder retentionlabel ensure --webUrl https://contoso.sharepoint.com/sites/project-x --folderUrl '/Shared Documents' --name 'Some label'
 ```
 
-Applies a retention label to a folder based on the label name and the folderId
+Applies a retention label to a folder based on the label name and the folderId.
 
 ```sh
 m365 spo folder retentionlabel ensure --webUrl https://contoso.sharepoint.com/sites/project-x --folderId '26541f96-017c-4189-a604-599e083533b8'  --name 'Some label'
