--- a/docs/docs/cmd/spo/folder/folder-roleassignment-remove.mdx
+++ b/docs/docs/cmd/spo/folder/folder-roleassignment-remove.mdx
@@ -20,13 +20,13 @@ m365 spo folder roleassignment remove [options]
 : The server- or site-relative decoded URL of the folder.
 
 `--principalId [principalId]`
-: The SharePoint principal id. It may be either an user id or group id for which the role assignment will be removed. Specify either upn, groupName or principalId but not multiple.
+: The SharePoint principal id. It may be either an user id or group id for which the role assignment will be removed. Specify either `upn`, `groupName` or `principalId` but not multiple.
 
 `--upn [upn]`
-: The upn/email of the user. Specify either upn, groupName or principalId but not multiple.
+: The upn/email of the user. Specify either `upn`, `groupName` or `principalId` but not multiple.
 
 `--groupName [groupName]`
-: The Azure AD or SharePoint group name. Specify either upn, groupName or principalId but not multiple.
+: The Azure AD or SharePoint group name. Specify either `upn`, `groupName` or `principalId` but not multiple.
 
 `-f, --force`
 : Don't prompt for confirmation when removing the role assignment.
@@ -36,7 +36,7 @@ m365 spo folder roleassignment remove [options]
 
 ## Examples
 
-Remove roleassignment from folder based on group name
+Remove roleassignment from folder based on group name.
 
 ```sh
 m365 spo folder roleassignment remove --webUrl "https://contoso.sharepoint.com/sites/contoso-sales" --folderUrl  "/Shared Documents/FolderPermission" --groupName "saleGroup"
@@ -59,3 +59,7 @@ Remove the role assignment from the specified folder based on the upn.
 ```sh
 m365 spo folder roleassignment remove --webUrl "https://contoso.sharepoint.com/sites/contoso-sales" --folderUrl "/Shared Documents/FolderPermission" --upn "test@contoso.onmicrosoft.com"
 ```
+
+## Response
+
+The command won't return a response on success.
