--- a/docs/docs/cmd/spo/group/group-member-remove.mdx
+++ b/docs/docs/cmd/spo/group/group-member-remove.mdx
@@ -42,13 +42,13 @@ m365 spo group member remove [options]
 
 ## Examples
 
-Remove a user from a SharePoint group based on the id on a given web
+Remove a user from a SharePoint group based on the id on a given web.
 
 ```sh
 m365 spo group member remove --webUrl https://contoso.sharepoint.com/sites/SiteA --groupId 5 --userName "Alex.Wilber@contoso.com"
 ```
 
-Remove a user from a SharePoint group based on the username on a given web
+Remove a user from a SharePoint group based on the username on a given web.
 
 ```sh
 m365 spo group member remove --webUrl https://contoso.sharepoint.com/sites/SiteA --groupName "Site A Visitors" --email "Alex.Wilber@contoso.com"
@@ -60,13 +60,13 @@ Remove a user from a SharePoint group by email.
 m365 spo group member remove --webUrl https://contoso.sharepoint.com/sites/SiteA --groupName "Site A Visitors" --userId 14
 ```
 
-Remove an Azure AD group from a SharePoint group based on the Azure AD group name on a given web
+Remove an Azure AD group from a SharePoint group based on the Azure AD group name on a given web.
 
 ```sh
 m365 spo group member remove --webUrl https://contoso.sharepoint.com/sites/SiteA --groupId 5 --aadGroupName "Azure AD Security Group"
 ```
 
-Remove an Azure AD group from a SharePoint group based on the Azure AD group ID on a given web
+Remove an Azure AD group from a SharePoint group based on the Azure AD group ID on a given web.
 
 ```sh
 m365 spo group member remove --webUrl https://contoso.sharepoint.com/sites/SiteA --groupName "Site A Visitors" --aadGroupId "5786b8e8-c495-4734-b345-756733960730"
