--- a/docs/docs/cmd/spo/hidedefaultthemes/hidedefaultthemes-set.mdx
+++ b/docs/docs/cmd/spo/hidedefaultthemes/hidedefaultthemes-set.mdx
@@ -14,7 +14,7 @@ m365 spo hidedefaultthemes set [options]
 
 ```md definition-list
 `--hideDefaultThemes <hideDefaultThemes>`
-: Set to `true` to hide default themes and to `false` to show them
+: Set to `true` to hide default themes and to `false` to show them.
 ```
 
 <Global />
@@ -29,11 +29,15 @@ To use this command you have to have permissions to access the tenant admin site
 
 ## Examples
 
-Hide default themes and allow users to use organization themes only
+Hide default themes and allow users to use organization themes only.
 
 ```sh
 m365 spo hidedefaultthemes set --hideDefaultThemes true
 ```
+
+## Response
+
+The command won't return a response on success.
 
 ## More information
 
